--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" conent="Grant Roscoe's personal website at SHSU">
+    <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
     <title>gman96x.github.io</title>
 </head>
-    
-    <body>
-        <h1>Welcome to my web site</h1>
+<body>
+    <header>
+        <img src="images/ME.png" alt="Grant Roscoe's picture" width="100" height="100">
+    </header>
+        <h1>Welcome to my web site!</h1>
     </body>
     </html>
         
