--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" conent="Grant Roscoe's personal website at SHSU">
+    <meta name="description" content="Grant Roscoe's personal website at SHSU">
     <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
     <title>gman96x.github.io</title>
 </head>
