--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             
             </ul>
         </nav>
+        <p>Click here to download <a herf="Files/How to set up GitHub and VS Code.docx">my resume</a>.</p>
+        <p>Click here to go to <a href="www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
     </main>
         
     </body>
