--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             </ul>
         </nav>
-        <p>Click here to download <a href="Files/How to set up GitHub and VS Code.docx">my resume</a>.</p>
+        <p>Click here to download <a href="Files/How_to_set_up_GitHub_and_VS_Code.docx">my resume</a>.</p>
         <p>Click here to go to <a href="www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
     </main>
         
