--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </nav>
         <p>Click here to download <a href="Files/How_to_set_up_GitHub_and_VS_Code.docx">my resume</a>.</p>
         <p>Click here to go to <a href="www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
+        <p>You can contact me at my email adress: <a href="gxr059@shsu.edu">gxr059@shsu.edu</a>.</p>
     </main>
         
     </body>
