--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <p>Click here to download <a href="Files/How_to_set_up_GitHub_and_VS_Code.docx">my resume</a>.</p>
         <p>Click here to go to <a href="www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
         <p>You can contact me at my email address: <em><a href="gxr059@shsu.edu">gxr059@shsu.edu</a></em></p>
+        <br>
+        <hr>
+        <footer>
+            <p>&copy; CopyRight 2022</p>
+        </footer>
     </main>
         
     </body>
