--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <p>Click here to download <a href="Files/How_to_set_up_GitHub_and_VS_Code.docx">my resume</a>.</p>
-        <p>Click here to go to <a href="www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
+        <p>Click here to go to <a href="https://www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
         <p>You can contact me at my email address: <em><a href="gxr059@shsu.edu">gxr059@shsu.edu</a></em></p>
         <br>
         <hr>
