--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Welcome to my web site!</h1>
         <h2>gman96x.github.io</h2>
-        <h3>Here you can learn a little bit about me and work my experience !</h3>
+        <h3>Here you can learn a little bit about me and my work experience!</h3>
         <nav>
             <ul>
                 <li>Education</li>
