--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Certifications</li>
-                <li><a href="#" >Class Projects</a></li>
+                <li><a href="images/Files/How to set up GitHub and VS Code.docx" >Class Projects</a></li>
             
             </ul>
         </nav>
