--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/ME Version 2.png" alt="Grant Roscoe's picture" width="100" height="100">
+        <img src="images/Files/ME Version 2.png" alt="Grant Roscoe's picture" width="100" height="100">
     </header>
     <main>
         <h1>Welcome to my web site!</h1>
