--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
         <p>Click here to download <a href="images/Files/Grant Roscoe Resume 2022.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
-        <p>You can contact me at my email address: <em><a href="gxr059@shsu.edu">gxr059@shsu.edu</a></em></p>
+        <p>You can contact me at my email address: <em><a href="mailto:""gxr059@shsu.edu">gxr059@shsu.edu</a></em></p>
         <br>
         <hr>
         <footer>
