--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Certifications</li>
-                <li><a href="images/Files/How_to_set up_GitHub_and_VS_Code.docx" >Class Projects</a></li>
+                <li><a href="images/Files/How_to_set_up_GitHub_and_VS_Code.docx" >Class Projects</a></li>
             
             </ul>
         </nav>
