--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name="description" content="Grant Roscoe's personal website at SHSU">
     <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
     <title>gman96x.github.io</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
         <img src="images/Files/MEVersion2.png" alt="Grant Roscoe's picture" width="100" height="100">
+        <h1 class="shadow">Grant Roscoe's homepage</h1>
+        <h2 class="shadow">gman96x.github.io</h2>
     </header>
     <main>
-        <h1>Welcome to my web site!</h1>
-        <h2>gman96x.github.io</h2>
         <h3>Here you can learn a little bit about me and my work experience!</h3>
         <nav>
-            <ul>
+            <ul id="list">
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Certifications</li>
