--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         <hr>
         <footer>
-            <p>&copy; CopyRight 2022</p>
+            <p class="copyright">&copy; Copyright 2022</p>
         </footer>
     </main>
         
