--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Certifications</li>
-                <li><a href="Files/How to set up GitHub and VS Code.docx" >Class Projects</a></li>
+                <li><a href="Files/How_to_set_up_GitHub_and_VS Code.docx" >Class Projects</a></li>
             
             </ul>
         </nav>
-        <p>Click here to download <a href="Files/Grant Roscoe Resume 2022.docx">my resume</a>.</p>
+        <p>Click here to download <a href="Files/Grant_Roscoe_Resume_2022.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
         <p>You can contact me at my email address: <em><a href= mailto:gxr059@shsu.edu>gxr059@shsu.edu</a></em></p>
         <br>
