--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
         <p>Click here to download <a href="Files/Grant_Roscoe_Resume_2022.docx">my resume</a>.</p>
         <p>Click here to go to <a href="https://www.linkedin.com/in/grant-roscoe" target="_blank">my LinkedIn profile</a>.</p>
-        <p>You can contact me at my email address: <a href= mailto:gxr059@shsu.edu>gxr059@shsu.edu</a></em></p>
+        <p>You can contact me at my email address: <a href= mailto:gxr059@shsu.edu>gxr059@shsu.edu</a>.</p>
         <br>
         <hr>
         <footer>
