--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Certifications</li>
-                <li><a href="Files/How_to_set_up_GitHub_and_VS Code.docx" >Class Projects</a></li>
+                <li><a href="Files/How_to_set_up_GitHub_and_VS_Code.docx" >Class Projects</a></li>
             
             </ul>
         </nav>
