--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="list">
                 <li>Education</li>
                 <li>Work Experience</li>
-                <li>Knowledge & skills</li>
+                <li>Knowledge & Skills</li>
                 <li>Certifications</li>
                 <li><a href="Files/How_to_set_up_GitHub_and_VS_Code.docx" >Class Projects</a></li>
             
