--- a/styles/project.html
+++ b/styles/project.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Grant Roscoe's personal website at SHSU">
     <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
     <title>gman96x.github.io | Projects</title>
-    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/project.html">
 </head>
 <body>
     <header>
