--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
         <p>Lorem200</p>
      </article>
      <aside>
-        <h4>Refrences</h4>
+        <h4>References</h4>
         <ol>
             <li><a href="https://www.w3schools.com">W3Schools</a></li>
             <li><a href="https://developer.mozilla.org">Mozilla</a></li>
