--- a/menu.html
+++ b/menu.html
@@ -18,4 +18,8 @@
                    About Us</a></li>
         </ul>
     </nav>
-    
+ <article>
+    <h1>Research Project B</h1>
+    <h2>Introduction</h2>
+    <h2>Background</h2>
+ </article>   
