--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,6 @@
     </nav>
  <article>
     <h1>Research Project B</h1>
-    <h2>Introduction</h2>
-    <h2>Background</h2>
+    <h2>Introduction,Background</h2>
+
  </article>   
