--- a/menu.html
+++ b/menu.html
@@ -22,5 +22,8 @@
     <h1>Research Project B</h1>
     <h2>Introduction</h2>
     <h2>Background</h2>
+    <h2>Method</h2>
+    <h2>Analysis</h2>
+    <h2>Results</h2>
 
  </article>   
