--- a/menu.html
+++ b/menu.html
@@ -32,5 +32,9 @@
     <aside>
      <p>Introduction</p>
      <p>Background</p>
+     <p>Method</p>
+     <p>Anylisis</p>
+     <P>Results</P>
+     <p>Discussion</p>
     </aside>
  </article>   
