--- a/menu.html
+++ b/menu.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <nav id="nav_menu">
-        <ul>
+        <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="project.html">Project A</a></li>
             <li><a href="menu.html" class="current">Project B</a></li> 
             <li><a href="#" class="lastitem">
                    About Us</a></li>
-        </ul>
+        </ol>
     </nav>
  <article>
     <h1>Research Project B</h1>
@@ -38,6 +38,8 @@
             <a>Introduction</a>
             <a>Background</a>
             <a>Method</a>
+            <a>Analysis</a>
+            <a>Results</a>
             <a>Discussion</a>
         </ol>
     </aside>
