--- a/menu.html
+++ b/menu.html
@@ -35,11 +35,11 @@
     </article>   
     <aside>
         <ol>
-            <a>Introduction</a>
-            <a>Background</a>
-            <a>Method</a>
-            <a>Analysis</a>
-            <a>Results</a>
-            <a>Discussion</a>
+            <p><a>Introduction</a></p>
+            <p><a>Background</a></p>
+            <p><a>Method</a></p>
+            <p><a>Analysis</a></p>
+            <p><a>Results</a></p>
+            <p><a>Discussion</a></p>
         </ol>
     </aside>
