--- a/menu.html
+++ b/menu.html
@@ -39,8 +39,8 @@
             <p><a href="#Background">Background</a></p>
             <p><a href="#Method">Method</a></p>
             <ul>
-            <p><a href="#Analysis">Analysis</a></p>
-            <p><a href="#Results">Results</a></p>
+            <li><a href="#Analysis">Analysis</a></li>
+            <li><a href="#Results">Results</a></li>
             </ul>
             
             <p><a href="#Discussion">Discussion</a></p>
