--- a/menu.html
+++ b/menu.html
@@ -35,9 +35,9 @@
     </article>   
     <aside>
         <ol>
-            <p><a href="#Introduction">Introduction</a></p>
-            <p><a href="#Background">Background</a></p>
-            <p><a href="#Method">Method</a></p>
+            <li><a href="#Introduction">Introduction</a></li>
+            <li><a href="#Background">Background</a></li>
+            <li><a href="#Method">Method</a></li>
             <ul>
             <li><a href="#Analysis">Analysis</a></li>
             <li><a href="#Results">Results</a></li>
