--- a/menu.html
+++ b/menu.html
@@ -43,6 +43,6 @@
             <li><a href="#Results">Results</a></li>
             </ul>
             
-            <p><a href="#Discussion">Discussion</a></p>
+            <li><a href="#Discussion">Discussion</a></li>
         </ol>
     </aside>
