--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,5 @@
             <li><a href="#Results">Results</a></li>
             </ul>
             <li><a href="#Discussion">Discussion</a></li>
-            <li<a href="#Return to the top of the page">Return to the top of the page</a></li>
-        </ol>
+            <li><a href="#Return to the top of the page">Return to the top of the page</a></li>
     </aside>
