--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,6 @@
             <li><a href="#Results">Results</a></li>
             </ul>
             <li><a href="#Discussion">Discussion</a></li>
-            <p><a href="#Research Project B">Return to the top of the page</a></li>
+            <p><a href="#Research Project B">Return to the top of the page</a>
      </ol>
     </aside>
