--- a/menu.html
+++ b/menu.html
@@ -46,5 +46,5 @@
             <li><a href="#Discussion">Discussion</a></li>
             
      </ol>
-     <p><a href="#Research Project B">Return to the top of the page</a>
+     <p><a href="#Research_Project_B">Return to the top of the page</a>
     </aside>
