--- a/menu.html
+++ b/menu.html
@@ -39,11 +39,11 @@
             <li><a href="#Introduction">Introduction</a></li>
             <li><a href="#Background">Background</a></li>
             <li><a href="#Method">Method</a></li>
-            <ul>
+            <p>
             <li><a href="#Analysis">Analysis</a></li>
             <li><a href="#Results">Results</a></li>
             </ul>
-            <li><a href="#Discussion">Discussion</a></li>
+            <p><a href="#Discussion">Discussion</a></p>
             
      </ol>
      <p><a href="#Research_Project_B">Return to the top of the page</a>
