--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
             <li><a href="#Analysis">Analysis</a></li>
             <li><a href="#Results">Results</a></li>
            </ul>
-            <p><a href="#Discussion">Discussion</a></p>
+        <li><a href="#Discussion">Discussion</a></li>
         </ol>
      <p><a href="#Research_Project_B">Return to the top of the page</a>
     </aside>
