--- a/Exam1menu.html
+++ b/Exam1menu.html
@@ -12,12 +12,13 @@
     <nav id="nav_menu">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Project A</a></li>
-            <li><a href="menu.html" class="current">Project B</a></li> 
-            <li><a href="#" class="lastitem">
+            <li><a href="tickets.html">Get Tickets</a></li> 
+            <li><a href="members.html" class="current">Become a Member</a></li> 
+            <li><a href="about_us.html" class="lastitem">
                    About Us</a></li>
         </ul>
     </nav>
+    
     
     <article>
         <h1 id="Research_Project_B">Research Project B</h1>
