--- a/rwd.html
+++ b/rwd.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Grant Roscoe's personal website at SHSU">
+    <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
+    <title>gman96x.github.io | Projects</title>
     <link rel="stylesheet" href="styles/rwd.css">
 </head>
 <body>
