--- a/rwd.html
+++ b/rwd.html
@@ -17,6 +17,12 @@
           <label class='menu-button-container' for="menu-toggle">
           <div class='menu-button'></div>
           </label>
+          <ul class="menu"> 
+            <li>Home</li>
+            <li>Resume</li>
+            <li>Projects</li>
+            <li>Experience</li>
+            <li>Contact Me</li>
   
 </body>
 </html>
