--- a/rwd.html
+++ b/rwd.html
@@ -17,11 +17,13 @@
           <div class='menu-button'></div>
           </label>
           <ul class="menu"> 
-            <li>Home</li>
-            <li>Resume</li>
-            <li>Projects</li>
-            <li>Experience</li>
-            <li>Contact Me</li>
+            <li><a href="rwd.html" class="current">Home</li>  
+                <li><a href="files/Grant_Roscoe_Resume_2022" target="_blank">Resume</a></li>
+                <li><a href="project.html">Projects</a></li>
+                <li><a href=#>Experience</a></li>
+                <li><a href=#>Contact Me</a></li>
+          </ul>
+    </section>
   
 </body>
 </html>
