--- a/rwd.html
+++ b/rwd.html
@@ -18,7 +18,7 @@
           </label>
           <ul class="menu"> 
             <li><a href="rwd.html" class="current">Home</li>  
-                <li><a href="files/Grant_Roscoe_Resume_2022" target="_blank">Resume</a></li>
+                <li><a href="files/Grant_Roscoe_Resume_2022.docx" target="_blank">Resume</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href=#>Experience</a></li>
                 <li><a href=#>Contact Me</a></li>
