--- a/rwd.html
+++ b/rwd.html
@@ -12,12 +12,13 @@
     
 </body>
 </html>
+    <head>
     <meta charset="UTF-8">
     <meta name="description" content="Grant Roscoe's personal website at SHSU">
     <meta name="keywords" content="Grant Roscoe, student, mis, SHSU">
     <title>gman96x.github.io | Projects</title>
     <link rel="stylesheet" href="styles/rwd.css">
-</head>
+    </head>
 <body>
     <section class="top-nav"> 
         <div>
