--- a/table.html
+++ b/table.html
@@ -85,7 +85,7 @@
             <td>50-80k</td>
         </tr>    
         <tr>
-            <td>System Analyst</td>  
+            <td rowspan="1">System Analyst</td>  
         </tr>  
         <tr>
             <td>Data Analyst</td>  
