--- a/table.html
+++ b/table.html
@@ -85,10 +85,10 @@
             <td>50-80k</td>
         </tr>    
         <tr>
-            <td rowspan="2">System Analyst</td>  
+            <td>System Analyst</td>  
         </tr>  
         <tr>
-            <td rowspan="2">Data Analyst</td>  
+            <td>Data Analyst</td>  
         </tr> 
         <tr>
             <td>3.</td>
