--- a/table.html
+++ b/table.html
@@ -96,7 +96,7 @@
             <td>60-90k</td>
         </tr>        
         <tr>
-            <td>Web Developer</td>  
+            <td rowspan="2">Web Developer</td>  
         </tr> 
      </tr>
 
