--- a/table.html
+++ b/table.html
@@ -91,7 +91,7 @@
             <td>Data Analyst</td>  
         </tr> 
         <tr>
-            <td>3.</td>
+            <td rowspan="3">3.</td>
             <td>Software Developer</td>
             <td>60-90k</td>
         </tr>        
