--- a/table.html
+++ b/table.html
@@ -33,7 +33,7 @@
        </table>
        <br><br>
 <table class="second">        
-        <caption>IT Jobs and Salaries</caption>
+        <caption>TABLE 3: IT Jobs and Salaries</caption>
         </tr>   
         <tr>
             <th></th>
