--- a/table.html
+++ b/table.html
@@ -88,7 +88,7 @@
             <td>System Analyst</td>  
         </tr>  
         <tr>
-            <td>Data Analyst</td>  
+            <td rowspan="1">Data Analyst</td>  
         </tr> 
         <tr>
             <td rowspan="2">3.</td>
