--- a/table.html
+++ b/table.html
@@ -67,13 +67,16 @@
     </table>
     <br><br>
      <table class="third">
-     <caption>TABLE 3: IT Jobs and Salaries</caption>
-     </tr>
-     <tr>
+        <thead>
+            <tr>
+                <th colspan="3">TABLE 3: IT Jobs and Salaries</th>
+            </tr>   
+            <tr>
         <th>Catagory</th>
         <th>Job</th>
         <th>Salary</th>
      </tr>
+        </thead>
      <tr>
         <td>1.</td>
             <td>Support Technician</td>
