--- a/table.html
+++ b/table.html
@@ -78,14 +78,14 @@
      </tr>
         </thead>
      <tr>
-        <td>1.</td>
+            <td>1.</td>
             <td>Support Technician</td>
             <td>40-50k</td>
         </tr>
         <tr>
-            <td rowspan="2">2.</td>
+            <td rowspan="3">2.</td>
             <td>Business Analyst</td>            
-            <td>50-80k</td>
+            <td rowspan="3">50-80k</td>
         </tr>    
         <tr>
             <td>System Analyst</td>  
