--- a/table.html
+++ b/table.html
@@ -91,15 +91,15 @@
             <td>System Analyst</td>  
         </tr>  
         <tr>
-            <td rowspan="1">Data Analyst</td>  
+            <td>Data Analyst</td>  
         </tr> 
         <tr>
             <td rowspan="2">3.</td>
             <td>Software Developer</td>
-            <td>60-90k</td>
+            <td rowspan="2">60-90k</td>
         </tr>        
         <tr>
-            <td rowspan="3">Web Developer</td>  
+            <td>Web Developer</td>  
         </tr> 
      </tr>
 
