--- a/form.html
+++ b/form.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="temp/styles/form.css">
 </head>
 <body>
-    <form action="register_account.html" method="post"
-      id="registration_form">
+    <form action="register_account.html" method="post"id="registration_form">
     <fieldset>
         <legend>Registration Information</legend>
         <label for="email">E-Mail:</label>
