--- a/jsdemo.html
+++ b/jsdemo.html
@@ -18,6 +18,15 @@
                         <p>Gallons: ${gallons}</p>
                         <p>MPG: ${mpg.toFixed(2)}</p>`;
         document.write(html2);
+        <h1>The Rectangle Area Calculator</h1>
+        const width = parseFloat(prompt("Enter a width of a rectangle"));
+        const height = parseFloat(prompt("Enter a height of a rectangle"));
+        const area = parseFloat(width*height);
+        const html3 = `<p><label>Width: </label>${width}</p>
+                        <p><label>Height: </label>${height}</p>
+                        <p><label>Area: </label>${area.toFixed(3)}</p>`;
+        document.write(html3);
+    
 </script>    
 
 </body>
